--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --exec babel-node --presets env",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && nodemon ./dist/index.js --exec babel-node --presets env",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/ts-node ./index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "pokemongo-json-pokedex": "^3.3.0"
+    "pokemongo-json-pokedex": "^3.3.0",
+    "ts-node": "^7.0.1"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.9.4",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "typescript": "^3.0.3"
   }
 }
